Bump to JDK 24