@@ -17,12 +17,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jdk.version>22</jdk.version>
-        <javafx.version>22.0.1</javafx.version>
-        <weld.version>5.1.2.Final</weld.version>
-        <asm.version>9.7</asm.version>
-        <assertj.version>3.25.3</assertj.version>
-        <junit.version>5.10.2</junit.version>
+        <jdk.version>24</jdk.version>
+        <javafx.version>24</javafx.version>
+        <weld.version>6.0.2.Final</weld.version>
+        <asm.version>9.8</asm.version>
+        <assertj.version>4.0.0-M1</assertj.version>
+        <junit.version>5.12.2</junit.version>
         <testfx.version>4.0.18</testfx.version>
         <testfx.monocle.version>21.0.2</testfx.monocle.version>
     </properties>
@@ -95,13 +95,12 @@
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se-shaded</artifactId>
-            <version>4.0.2.Final</version>
+            <version>${weld.version}</version>
         </dependency>
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
@@ -110,13 +109,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.8.1</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.8.1</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -144,10 +143,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.jboss.weld.se</groupId>
-            <artifactId>weld-se-shaded</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
@@ -157,21 +152,21 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>3.4.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
+                    <version>3.13.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>3.5.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M5</version>
+                    <version>3.5.3</version>
                     <dependencies>
                         <dependency>
                             <groupId>org.ow2.asm</groupId>
@@ -195,7 +190,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.13.0</version>
                 <configuration>
                     <release>${jdk.version}</release>
                     <source>${jdk.version}</source>
@@ -231,6 +226,8 @@
                         --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --enable-native-access=javafx.graphics
+                        --sun-misc-unsafe-memory-access=allow
                     </argLine>
                     <useModulePath/>
                 </configuration>
@@ -248,7 +245,7 @@
                 <plugins>
                     <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.0.0-M5</version>
+                        <version>3.5.3</version>
                         <configuration>
                             <argLine>
                                 --add-exports=javafx.base/com.sun.javafx.logging=ALL-UNNAMED
@@ -260,6 +257,8 @@
                                 --add-opens=java.base/java.lang=weld.se.shaded
                                 --add-opens=simple.demo/org.tabula.demo=ALL-UNNAMED
                                 --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                                --enable-native-access=javafx.graphics
+                                --sun-misc-unsafe-memory-access=allow
                             </argLine>
                             <useModulePath/>
                             <systemPropertyVariables>
